# 2048

./: CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  Board.cpp  Board.h  MainScene.cpp  MainScene.h
cocos2d/: CMakeLists.txt
cocos2d/cocos/ui/UIEditBox/: UIEditBoxImpl-mac.mm
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android/res/values/: strings.xml
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist  main.cpp
proj.ios_mac/test_cocos.xcodeproj/: project.pbxproj
proj.ios_mac/test_cocos.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj.ios_mac/test_cocos.xcodeproj/project.xcworkspace/xcuserdata/shtaket.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/test_cocos.xcodeproj/xcuserdata/shtaket.xcuserdatad/xcschemes/: test_cocos Mac.xcscheme  test_cocos iOS.xcscheme  xcschememanagement.plist
proj.win32/: test_cocos.sln
proj.wp8-xaml/: test_cocos.sln
proj.wp8-xaml/App/: test_cocos.csproj
proj.wp8-xaml/App/Properties/: WMAppManifest.xml
